--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
 	"name": "canonical",
+	"jest": {
+		"verbose": true,
+		"transform": {
+			"^.+\\.js$": "babel-jest"
+		},
+		"globals": {
+			"NODE_ENV": "test"
+		},
+		"moduleFileExtensions": [
+			"js",
+			"jsx"
+		],
+		"moduleDirectories": [
+			"node_modules"
+		]
+	},
 	"version": "1.0.0",
 	"main": "index.js",
 	"license": "MIT",
@@ -24,6 +40,16 @@
 		"dev": "concurrently \"yarn start \" \"yarn watch-css\""
 	},
 	"devDependencies": {
-		"concurrently": "^4.1.0"
+		"@babel/plugin-proposal-class-properties": "^7.4.4",
+		"@babel/preset-env": "^7.4.4",
+		"@babel/preset-flow": "^7.0.0",
+		"@babel/preset-react": "^7.0.0",
+		"babel-core": "^7.0.0-bridge.0",
+		"babel-jest": "^24.8.0",
+		"babel-plugin-transform-es2015-destructuring": "^6.23.0",
+		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"concurrently": "^4.1.0",
+		"jest": "^23.6.0"
 	}
 }
